examples/test/testpolicy7655.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7655
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key4: value49
      key44: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value38
          key34: value10
          key42: value22
      podSelector:
        matchLabels:
          key13: value27
